snapshot process and some end-to-end results

--- a/client/site/index.html
+++ b/client/site/index.html
@@ -16,6 +16,10 @@
         chat.send(e);
       });
 
+      chat.onmessage = function(event) {
+        console.log(event)
+      }
+
     }
 
   </script>
