WIP - client to render server state

--- a/client/site/index.html
+++ b/client/site/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script type="text/javascript" src="lib/Long.min.js"></script>
     <script type="text/javascript" src="lib/ByteBufferAB.min.js"></script>
     <script type="text/javascript" src="lib/ProtoBuf.min.js"></script>
     <script type="text/javascript" src="js/celestia.js"></script>
